[docs] update docks
