# docs/swagger.yaml
@@ -36,6 +36,22 @@ info:
   version: "1.0"
 paths:
   /api/v1/depoimentos:
+    get:
+      consumes:
+      - application/json
+      description: Get a list of all Testimonials
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/entity.Testimonial'
+            type: array
+      summary: Retrieve all Testimonials
+      tags:
+      - testimonials
     post:
       consumes:
       - application/json
@@ -55,23 +71,6 @@ paths:
           schema:
             $ref: '#/definitions/entity.Testimonial'
       summary: Create a Testimonial
-      tags:
-      - testimonials
-  /api/v1/testimonials:
-    get:
-      consumes:
-      - application/json
-      description: Get a list of all Testimonials
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/entity.Testimonial'
-            type: array
-      summary: Retrieve all Testimonials
       tags:
       - testimonials
     put:
@@ -95,7 +94,24 @@ paths:
       summary: Update a Testimonial
       tags:
       - testimonials
-  /api/v1/testimonials/{id}:
+  /api/v1/depoimentos-home:
+    get:
+      consumes:
+      - application/json
+      description: Get a list of three random Testimonials
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/entity.Testimonial'
+            type: array
+      summary: Retrieve three random Testimonials
+      tags:
+      - testimonials
+  /api/v1/depoimentos/{id}:
     delete:
       consumes:
       - application/json
